--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/react": "^11.11.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
