--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "JSONStream": "^1.3.5",
+    "cors": "^2.8.5",
+    "json-parse-stream": "^0.0.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
