--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "JSONStream": "^1.3.5",
+    "antd": "^5.11.3",
     "cors": "^2.8.5",
     "json-parse-stream": "^0.0.2",
     "jwt-decode": "^3.1.2",
