--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "cors": "^2.8.5",
     "json-parse-stream": "^0.0.2",
     "jwt-decode": "^3.1.2",
+    "moment": "2.24.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
