--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "JSONStream": "^1.3.5",
     "antd": "^5.11.3",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "json-parse-stream": "^0.0.2",
     "jwt-decode": "^3.1.2",
