--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.11.3",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "firebase": "^10.7.0",
     "json-parse-stream": "^0.0.2",
     "jwt-decode": "^3.1.2",
     "moment": "2.24.0",
