--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
     "sweetalert2": "^11.10.0"
