--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.11.3",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "css-loader": "^6.8.1",
     "firebase": "^10.7.0",
     "json-parse-stream": "^0.0.2",
     "jwt-decode": "^3.1.2",
@@ -32,6 +33,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
+    "style-loader": "^3.3.3",
     "sweetalert2": "^11.10.0"
   },
   "devDependencies": {
