--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "json-parse-stream": "^0.0.2",
     "jwt-decode": "^3.1.2",
     "moment": "2.24.0",
+    "petfinder": "^0.1.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-calendar": "^4.6.1",
