--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://agrabio134.github.io/react_refresher",
   "name": "react_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -22,6 +25,7 @@
     "cors": "^2.8.5",
     "css-loader": "^6.8.1",
     "firebase": "^10.7.0",
+    "gh-pages": "^6.1.0",
     "json-parse-stream": "^0.0.2",
     "jwt-decode": "^3.1.2",
     "moment": "2.24.0",
@@ -45,6 +49,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "source-map-explorer": "^2.5.3",
     "vite": "^4.4.5"
   }
 }
