--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
