--- a/.github/workflows/auto-screenshot.yml
+++ b/.github/workflows/auto-screenshot.yml
@@ -17,22 +17,23 @@ jobs:
       run: |
         npm install
 
-    # Uncomment the following block if you have a test script defined in your package.json
     - name: Run tests
       run: |
-        npm test
-      continue-on-error: true  # This will let the workflow continue even if tests fail (optional)
+        npm test || echo "No tests specified"
+      continue-on-error: true  # This allows the workflow to continue even if no tests are defined
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: artifact-name
-        path: path/to/artifact
+        name: build-artifact
+        path: ./build  # Change this to the actual path of your build or artifacts
 
     - name: Node script to open GitHub repo
       run: |
-        node -e "
+        const puppeteer = require('puppeteer');
         (async () => {
+          const browser = await puppeteer.launch();
+          const page = await browser.newPage();
           await page.goto('https://github.com/agrabio134/react_refresher');
+          await browser.close();
         })();
-        "
