--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-     "test": "jest"
+     "test": "jest",
+     "screenshot-script": "node screenshot.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
