--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 
   },
   "dependencies": {
+    "puppeteer": "^latest_version",
     "@emotion/react": "^11.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
