--- a/.github/workflows/auto-screenshot.yml
+++ b/.github/workflows/auto-screenshot.yml
@@ -13,15 +13,16 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Ensure this matches Puppeteer's requirements
+          node-version: '18'
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm install
+
+      - name: Create screenshots directory
+        run: mkdir -p screenshots  # Ensure screenshots directory exists
 
       - name: Run screenshot script
-        run: |
-          node screenshot.js
+        run: node screenshot.js
         continue-on-error: true  # Allow the script to continue even if it fails for debugging
 
       - name: Upload screenshot artifact
@@ -30,9 +31,3 @@ jobs:
           name: code-screenshots
           path: screenshots/
           if-no-files-found: warn
-          include-hidden-files: false
-
-      - name: List files in screenshots directory
-        run: |
-          ls -lh screenshots/  # Verify if the screenshot file exists
-
