--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
     "style-loader": "^3.3.3",
-    "sweetalert2": "^11.10.0"
+    "sweetalert2": "^11.10.0",
+    "puppeteer": "^19.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
